--- a/build.gradle
+++ b/build.gradle
@@ -24,5 +24,22 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
+	
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	
+	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE'
+	
+	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
+	implementation 'com.sun.xml.bind:jaxb-impl:2.3.0.1'
+	
+	implementation 'org.postgresql:postgresql'
+	
+	implementation 'me.saro:commons:1.9'
+	
+	compileOnly 'org.projectlombok:lombok:1.18.2'
+	annotationProcessor 'org.projectlombok:lombok:1.18.4'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
