--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 	
 	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.3.4.RELEASE'
 	
+	
+	// https://mvnrepository.com/artifact/org.springframework.security/spring-security-jwt
+// compile group: 'org.springframework.security', name: 'spring-security-jwt', version: '1.0.10.RELEASE'
+	
+	
 	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
 	implementation 'com.sun.xml.bind:jaxb-impl:2.3.0.1'
 	
